[tool.poetry]
name = "streamlit-fesion"
version = "0.1.0"
description = ""
authors = ["Yuichiro Tachibana (Tsuchiya) <t.yic.yt@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
scikit-image = "^0.18.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
