[tool.poetry]
name = "streamlit-fesion"
version = "0.4.0"
description = ""
authors = ["Yuichiro Tachibana (Tsuchiya) <t.yic.yt@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/whitphx/streamlit-webrtc"
include = ["./streamlit_fesion/frontend/build/**/*"]
exclude = ["./streamlit_fesion/frontend/[!build]*"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11,!=3.9.7"  # 3.9.7 is excluded due to https://github.com/streamlit/streamlit/pull/5168
streamlit = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
scikit-image = "^0.18.3"
click = ">=7.0,<8.0"  # We must specify the click version because we install older versions of Streamlit in the CI process and their depending click version is different from the newer releases.
# It is necessary to specify numpy and pandas versions for Poetry to resolve the package versions correctly and avoid errors.
numpy = "^1.21.0"
pandas = [
  {version = "1.1.5", python = ">=3.7,<3.8"},
  {version = "^1.4.0", python = ">=3.8,<3.11"},
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
